--- a/exam.html
+++ b/exam.html
@@ -54,7 +54,7 @@ console.log(person.age)
 7)const nestedArray = [1, [2, [3, [4, [5]]]]];
 const flatArray = nestedArray.flat(Infinity);
 
-console.log(flatArray); // Output: [1, 2, 3, 4, 5]
+console.log(flatArray);
 
      
      
