--- a/exam.html
+++ b/exam.html
@@ -34,7 +34,7 @@ console.log(person.name)
 console.log(person.age)
 
 
-6.const days = {
+6)const days = {
     day1:sunday,
     day2:monday,
     day3:tuesday,
@@ -93,37 +93,3 @@ if (21<y){
  }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-*/
-
-}
-else{
-    ".........."
-}
-
-</script>
